--- a/MyAwesomeApp/springboot-docker-hub.yaml
+++ b/MyAwesomeApp/springboot-docker-hub.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-angular-app
-        image: sraves/springbootapp:latest
+        image: sraves/mywebapp:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
